--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,26 @@ ul{
     color: #ffffff;
 }
 
+.button3
+{
+    font-weight: bold;
+    color: rgb(115, 184, 87);
+    text-transform: uppercase;
+    border: 1px solid white;
+    padding: 2px 5px;
+    display: inline-block;
+    border-radius: 10px;
+    text-decoration: none;
+    margin-top: 5px;
+    transition: all 0.3s ease-in 0s;
+}
+
+.button3:hover
+{
+    background: rgb(4, 196, 180);
+    color: rgb(255, 255, 255);
+}
+
 /* PORTFOLIO */
 
 #portfolio
